--- a/rulebooks/dummy_debug.yml
+++ b/rulebooks/dummy_debug.yml
@@ -10,6 +10,7 @@
   rules:
     - name: Dummy rule
       condition: |
-        event
+        event.status == "print"
       action:
-        debug:
+        print_event:
+          pretty: true
