--- a/rulebooks/dummy_debug.yml
+++ b/rulebooks/dummy_debug.yml
@@ -10,7 +10,7 @@
   rules:
     - name: Dummy rule
       condition: |
-        event.status == "print"
+        event.payload.status == "print"
       action:
         print_event:
           pretty: true
