Comment other terms on run template

--- a/rulebooks/dummy_ping.yml
+++ b/rulebooks/dummy_ping.yml
@@ -15,5 +15,5 @@
         run_job_template:
           name: Ping
           organization: EDA-SK Demo
-          set_facts: true
-          include_events: true
+          # set_facts: true
+          # include_events: true
