--- a/playbooks/ping.yml
+++ b/playbooks/ping.yml
@@ -1,6 +1,6 @@
 ---
 - name: Basic connectivity test
   hosts: all
-  gather_facts: true
-  become: true
+  gather_facts: false
+  become: false
   roles: []
